--- a/core/templates/core/nosotros.html
+++ b/core/templates/core/nosotros.html
@@ -6,13 +6,13 @@
 <br />
 <section  style="text-align: center;" >
     <h2 style="text-align: center; font-weight: bolder">electroniks Chile Ltda.</h2>
-    <h4 style="text-align: center; font-weight: bolder">Donde la diversión cobra vida</h4>
-    <p class="paragraph">
-        ¡Bienvenido a electroniks, tu paraíso gamer! Descubre una amplia selección
-        de los títulos más emocionantes, desde clásicos atemporales hasta las
-        últimas novedades en el mundo del gaming. Nuestros expertos están listos
-        para ayudarte a encontrar la experiencia de juego perfecta. ¡Sumérgete en
-        la diversión en electroniks!
+    <h4 style="text-align: center; font-weight: bolder">Donde la tecnología cobra vida</h4>
+    <p class="paragraph" style="margin-left: 20%; margin-right: 20%;">
+        ¡Bienvenido a Electronik, tu tienda de confianza en periféricos electrónicos! Explora una 
+        amplia selección de productos diseñados para potenciar tu experiencia digital, desde teclados 
+        y mouse de alto rendimiento hasta auriculares y monitores de última generación. Nuestro equipo 
+        de expertos está aquí para asesorarte y ayudarte a encontrar los periféricos perfectos para tus 
+        necesidades. ¡Lleva tu setup al siguiente nivel con Electronik!
     </p>
 
     <div class="container-fluid">
@@ -73,6 +73,6 @@
             </div>
         </div>
     </div>
-    <a href="{% url 'poblar'%}" class="btn btn-dark" style="text-align: center" >poblar</a>
+    <!-- <a href="{% url 'poblar'%}" class="btn btn-dark" style="text-align: center" >poblar</a> -->
   </section>
 {% endblock content %}
